added the angular frontend for invoice

--- a/ng_frontend/index.html
+++ b/ng_frontend/index.html
@@ -3,8 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Angular Sample - Retail Application</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <!--  Angular Setup -->
+
+        <link href="css/beyond.css" rel="stylesheet">
+	<!--  Angular Setup -->
         <script src="lib/angular.js"></script>
         <script src="lib/angular-ui-router.js"></script>
         <script src="lib/angular-resource.js"></script>
@@ -14,6 +19,7 @@
 
         <!--  Controllers -->
         <script src="js/product.control.js"></script>
+        <script src="js/invoice.control.js"></script>
         <script src="js/service.js"></script>
 
     </head>
